app/globals.css
@import "tailwindcss";

:root {
  --deep-twilight: #191868ff; /*background*/
  --deep-navy: #0C1342ff;  /*borders*/
  --turquoise: #16E0BD; /*active link or 623CEA*/
  --deep-twilight-2: #13125Aff;  /*section backgorund*/
  --deep-navy-2: #06053Bff;  /*borders*/
  --lavender-grey: #8E8CC1ff; /*passive link*/
  --cream: #fffecc;  /*highlight*/
  --procelain: #FFFFFA; /*texts*/
  --true-cobalt: #211F86ff; /*section backgorund*/
  --x: 50%;
  --y: 50%;

  /*HSL if needed
  --deep-twilight: hsla(241, 63%, 25%, 1);
  --deep-navy: hsla(232, 69%, 15%, 1);
  --slate-grey: hsla(235, 13%, 50%, 1);
  --deep-twilight-2: hsla(241, 67%, 21%, 1);
  --deep-navy-2: hsla(241, 84%, 13%, 1);
  --lavender-grey: hsla(242, 30%, 65%, 1);
  --prussian-blue: hsla(240, 74%, 9%, 1);
  --true-cobalt: hsla(241, 62%, 32%, 1);
  */
}

body {
  background-color: var(--deep-navy-2);
  color: var(--procelain);
  font-family: serif, sans-serif;
  margin: 0;
}

p{
  font-size: 1rem;
}

.cursor-glow {
  position: fixed;
  inset: 0;
  pointer-events: all;
  background: radial-gradient(
    70px circle at var(--x) var(--y),
    var(--lavender-grey),
    transparent 60%
  );
  z-index: -5;
}

.nav_{
  color: var(--procelain) !important;
  font-size: 0.7rem !important;
}

.sect{
  display: flex;
  margin: 1.5rem 3rem;
  color: var(--procelain);
}

.name{
  font-size: 2.5rem;
}

.roles{
  margin-bottom: 1.3rem;
}

.pro-pic{
height: 30vh;
width: auto;
display: block;
position: relative;
border: 2px solid var(--cream);
padding: 0.1rem;
border-radius: 12px;
}

.hero{
  margin-right: 10px;
}

.displays{
  width: 30%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
}

.cards{
  border: 1.5px var(--cream) double;
  border-radius: 17px;
  padding: 1rem !important;
  margin-top: 1rem !important;
}

.cards ul {
  padding-left: 1rem;  
  margin: 0.5rem 0 0 0; 
}

.foot-ico{
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  width: 100vw;
}

.resume-preview{
  margin-top: 2rem !important;
  margin-left: 8rem !important;
}

.contact{
  margin: 0;
}

.ico:hover{
  color: var(--deep-navy-2);
}

.card-stack{
  margin: 0;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: baseline;
  flex-wrap: wrap;
}

@media (max-width: 1024px) {
  body{
    overflow-y: scroll;
    overflow-x: hidden;
  }

  .cursor-glow {
    display: none;
  }
  
  .nav_ {
    font-size: 0.5rem !important;
  }

  .sect{
    display: flex;
    flex-direction: column-reverse;
  }
  
  .displays{
    width: 100%;
  }

  .foot-ico{
    padding-right: 4rem;
  }

  .ico:hover{
    color: var(--lavender-grey);
  }

  .resume-preview{
    margin-left: 5% !important;
    width: 90vw !important;
  }

  .card-stack{
    flex-direction: column;
    align-items: center;
  }
}

